2025-11-13T00:51:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19316761693 # 1302
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-13
* notice: last 14d: unq all: 8 11
* notice: prev accum: outdated-unq outdated-all / unq all: 3010 5401 / 3022 5417
* notice: next accum: outdated-unq outdated-all / unq all: 3014 5406 / 3022 5417
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-29] / []

2025-11-11T12:20:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19265410268 # 1299
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-11
* notice: last 14d: unq all: 11 16
* notice: prev accum: outdated-unq outdated-all / unq all: 3009 5400 / 3022 5417
* notice: next accum: outdated-unq outdated-all / unq all: 3010 5401 / 3022 5417
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-28] / []

2025-11-11T00:51:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19251143154 # 1298
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-11
* notice: last 14d: unq all: 12 17
* notice: prev accum: outdated-unq outdated-all / unq all: 3008 5399 / 3021 5415
* notice: next accum: outdated-unq outdated-all / unq all: 3009 5400 / 3022 5417
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-10-27] / [2025-11-10]

2025-11-09T12:17:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19208328462 # 1295