@@ -1,12 +1,7 @@
 {
-  "count": 11,
-  "uniques": 8,
+  "count": 7,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2025-10-31T00:00:00Z",
-      "count": 4,
-      "uniques": 3
-    },
     {
       "timestamp": "2025-11-01T00:00:00Z",
       "count": 2,
