@@ -1,3 +1,12 @@
+2025-11-15T00:50:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19381706904 # 1306
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-15
+* notice: last 14d: unq all: 5 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 3014 5406 / 3022 5417
+* notice: next accum: outdated-unq outdated-all / unq all: 3017 5410 / 3022 5417
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-10-31] / []
+
 2025-11-13T00:51:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19316761693 # 1302
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-13
